--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -32,4 +32,4 @@ script(src="static/js/config.js")
 script(src="static/3d/rateit/jquery.rateit.js")
 script(src="static/js/mi.helper.js")
 script(src="static/js/mi.rest.js")
-script(src="static/js/app.js")
+script(src="static/js/app1.js")
