--- a/interface/jade/mixins.jade
+++ b/interface/jade/mixins.jade
@@ -1,9 +1,9 @@
 mixin person_thumb(person, id)
-    .person-thumb(id=id?id:("person_thumb_" + person.id))
+    .person-thumb(data-mi-id="id",data-mi-val=person.id)
         .photo
-            img.img-responsive.img-circle(src=person.photo || "static/img/noperson.jpg")
+            img.img-responsive.img-circle(data-mi-atsrc="photo",data-mi-default="static/img/noperson.jpg",src=person.photo || "static/img/noperson.jpg")
         p
-            a(href="/person/"+person.id).name=person.name
+            a(href="/persons/"+person.id,data-mi-name="name",data-mi-athref="id").name=person.name
 
 mixin user_thumb(user, id)
     .user-thumb(id=id?id:("user_thumb_" + user.id),style='background-image:url("' + (user.avatar || conf.noavatar_url) + '")')
@@ -11,40 +11,39 @@ mixin user_thumb(user, id)
             a(href="/user/"+user.id).name=user.name
 
 mixin film_thumb(item,id)
-    .film-thumb.col-md-3(id="film-thumb-" + item.id)
+    .film-thumb.col-md-3(data-mi-id="id",data-mi-val=item.id)
         .poster-wrapper
-            .poster-place(style='background-image: url("' + item.poster + '")')
+            .poster-place(data-mi-id="poster",data-mi-atbg="poster",data-mi-default="static/img/noposter.jpg",style='background-image: url("' + item.poster + '")')
         .rating-place(class = item.rating?"":"invisible")
-            p.rating
-                =item.ratings.cons[0]
+            p.rating(data-mi-name="ratings.cons.0")
+                =item.ratings.cons
         .name-place
-            a(href="#").name
-                =item.name
-            span.year=" (" + item.year + ")"
+            a(href="/films/" + item.id,data-mi-athref="id",data-mi-name="name",data-mi-id="name").name=item.name
+            span.year(data-mi-id="year",data-mi-name="releasedate")=" (" + item.year + ")"
         .rel-place
-            .rateit.rate(data-rateit-max=10,data-rateit-resetable=0,data-rateit-value=(item.relation && item.relation.rating)?item.relation.rating:0)
-            button.notwatch-btn N
-        .button-place(class=!item.hasFree && item.price?"button-priced":"")
-            .instock(class=item.instock?"":"display-none")
-                button.watch-btn!=("Смотреть" + ((!item.hasFree && item.price)?"<br/><span>от <span class=\"price\">300</span> р. без рекламы</span>":"<br/>Бесплатно"))
-                button.playlist-btn +
-                .watchprice(class=(item.hasFree && item.price)?"":"invisible")
+            .rateit.rate(data-mi-id="relation.rating",data-mi-val=(item.relation && item.relation.rating)?item.relation.rating:0,data-rateit-max=10,data-rateit-resetable=0,data-rateit-value=(item.relation && item.relation.rating)?item.relation.rating:0)
+            button.notwatch-btn(data-mi-onclick="toggle_notwatch",data-mi-id="relation.notwatch",data-mi-val=item.relation && item.relation.notwatch?1:0) N
+        .button-place(data-mi-id="button-place",class=!item.hasFree && item.price?"button-priced":"")
+            .instock(data-mi-id="instock",class=item.instock?"":"display-none")
+                button.watch-btn(data-mi-id="watch_btn",data-mi-onclick="watchfilm")!=("Смотреть" + ((!item.hasFree && item.price)?"<br/><span>от <span class=\"price\" data-mi-name=\"price\">300</span> р. без рекламы</span>":"<br/>Бесплатно"))
+                button.playlist-btn(data-mi-id="relation.playlist",data-mi-onclick="toggle_playlist",data-mi-val=item.relation && item.relation.playlist?1:0) +
+                .watchprice(data-mi-id="watch_price",class=(item.hasFree && item.price)?"":"invisible")
                     | или<br/>
-                    a(href="#") от <span class="price">#{item.price}</span> р. без рекламы
-            .notinstock(class=item.instock?"display-none":"")
-                button.subscribe-btn Подписаться
+                    a(href="/films/" + item.id,data-im-athref="id") от <span class="price" data-mi-name="price">#{item.price}</span> р. без рекламы
+            .notinstock(data-mi-id="notinstock",class=item.instock?"display-none":"")
+                button.subscribe-btn(data-mi-id="relation.subscribed",data-mi-onclick="toggle_subscribe",data-mi-val=item.relation && item.relation.subscribed?1:0) Подписаться
                 .watchprice &nbsp;<br/>&nbsp;
 
 mixin comment_thumb(item, id)
-    .comment-thumb(id=id?id:("comment_" + item.id),data-mi-uid=item.id)
+    .comment-thumb(data-mi-id="id",data-mi-val=item.id)
         .avatar-place
-            img.img-responsive.img-circle(src=item.user.avatar || "static/img/noavatar.jpg")
+            img.img-responsive.img-circle(data-mi-atsrc="user.avatar",data-mi-default="static/img/noavatar.jpg",src=item.user.avatar || "static/img/noavatar.jpg")
         .text-place
             .info
-                .time(data-mi-time=item.created)=item.time_text || item.created
+                .time(data-mi-name="time_text",data-mi-id="time_text",data-mi-val=item.created)=item.time_text || item.created
                 .name
-                    a(href="/user/"+item.user.id)=item.user.name
-            .text!=item.text
+                    a(data-mi-athref="user.id",data-mi-name="user.name",href="/users/"+item.user.id)=item.user.name
+            .text(data-mi-name="text")!=item.text
 
 mixin feed_thumb(item, id)
     .feed-thumb(id=id?id:("feed_" + item.id))
@@ -119,16 +118,16 @@ mixin feed_thumb(item, id)
                                 a(href="/user/" + item.object.id)=item.object.name
 
 mixin location_thumb(item,id)
-    .location-thumb(id=id?id:(item.id?"loc_thumb_" + item.id:""))
-        .btn-place
-            button #{quality_text(item.quality)}
+    .location-thumb(data-mi-id="id",data-mi-val=item.id)
+        .btn-place(data-mi-id="quality",data-mi-val=item.quality)
+            button=item.quality
         .info-place
-            p.name #{location_name(item.type)}
-            p.price
-                - if (item.price_type=="f")
-                    смотреть бесплатно
-                - else if (item.price)
-                    =item.price + " р."
+            p.type(data-mi-val=item.type,data-mi-id="type")=item.type
+            p.price(data-mi-id="price",data-mi-val=item.price)
+                if (item.price_type==0)
+                    | смотреть бесплатно
+                else if (item.price)
+                    | #{item.price} + " р."
 
 mixin user_place(user)
     #usr_reg_place(class=user.is_auth?"":"display-none")
