--- a/interface/jade/page_person.jade
+++ b/interface/jade/page_person.jade
@@ -1,40 +1,49 @@
-- header_title = person.name
-html
-    include ../../interface/jade/config
-    include ../../interface/jade/head
-    include ../../interface/jade/globals
-    include ../../interface/jade/mixins
-- person_roles = person.roles && person.roles.length?person.roles.join(", "):false
-- person_birthplace = person.birthplace && person.birthplace.length?person.birthplace.join(", "):false
-- person_birthdate = new Date(person.birthdate)
-- person_years_old = how_long(person_birthdate, 0)
-- person_birthdate_string = date_text(person_birthdate) + " г. (" + person_years_old + ")"
-    body
-        include ../../interface/jade/header
-        .container
-            h1=person.name
-            .col-md-3.text-center
-                img.person-photo.img-responsive(src=person.photo || conf.noperson_big_url)
-                button.btn.btn-default#subscribe_btn Подписаться
-            .col-md-9
-                table.table.table-bordered
-                    - if (person_roles)
+doctype html5
+include mixins
+html(lang="ru")
+    include head
+    body.page-person
+        include header
+        .person-wrapper
+            .container
+                .col-md-3
+                    .photo
+                        img.img-responsive(src=person.photo || "static/img/noperson-big.jpg")
+                    .button-place
+                        button.subscribe-btn#subscribe_btn Подписаться
+                .col-md-9
+                    h1 #{person.name} <em>#{person.name_orig}</em>
+                    table
+                        if (person.roles && person.roles.length)
+                            tr
+                                th Карьера
+                                td
+                                    - items_str = person.roles.join(", ")
+                                    =items_str
+                        if (person.birthplace && person.birthplace.length)
+                            tr
+                                th Место рождения
+                                td
+                                    - items_str = person.birthplace.join(",")
+                                    =items_str
                         tr
-                            td=person_roles
-                    - if (person_birthplace)
-                        tr
-                            td=person_birthplace
-                    tr
-                        td=person_birthdate_string
-                h3 Биография
-                =person.bio
-        .container
-            h3 Фильмография
-            #films
-                each item in filmography
-                    mixin film_thumb(item)
-        .container.text-center#load-more-place
-            button.btn.btn-default#btn_loadmore Загрузить ещё
-        include ../../interface/jade/footer
+                            th Дата рождения
+                            td #{person.birthdate} #{person.years_old} лет
+                    h2 Биография
+                    .bio!=person.bio
+        .films-wrapper
+            .container
+                h2 Фильмография
+            .container#films
+                mixin film_thumb({id: 1, name: "Самый лучший фильм лучший фильм", year: 2014, relation: {rating: 5}, rating: {cons: 5.6}, poster: "static/img/tmp/poster1.jpg", instock: true, price: 100})
+                mixin film_thumb({id: 2, name: "Самый лучший фильм", year: 2011, relation: {rating: 5}, rating: {cons: 8.6}, poster: "static/img/tmp/poster1.jpg", instock: true, hasFree: true})
+                mixin film_thumb({id: 3, name: "Самый лучший фильм", year: 2001, relation: {rating: 8}, rating: {cons: 7}, poster: "static/img/tmp/poster1.jpg", instock: false})
+                mixin film_thumb({id: 4, name: "Самый лучший фильм", year: 1970, relation: {rating: 3}, rating: {cons: 9.1}, poster: "static/img/tmp/poster1.jpg", instock: true, hasFree: true, price: 100})
+            .container
+                .films-more#films_more
+                    button
+                        span Мало, хочу ещё фильмов
+                    .shadow
+        include footer
         script.
             $(document).ready(function () {window.InitApp({page_conf: !{JSON.stringify(person)}}, "Person")})
