--- a/interface/jade/page_registration.jade
+++ b/interface/jade/page_registration.jade
@@ -8,29 +8,28 @@ html(lang="ru")
             .container
                 h2 Регистрация
                 form#frm_reg(method="post")
-                    input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                     h4 с помощью почты
                     .form-group
                         input(type="email",name="email",placeholder="Эл.почта при вводе",required="required")#inp_email
                     .form-group
                         input(type="password",name="password",placeholder="Пароль",required="required")#inp_password
                     .form-group
-                        input(type="password",placeholder="Пароль ещё раз",required="required",name="password2")#inp_password_rep
+                        input(type="password",placeholder="Пароль ещё раз",required="required")#inp_password_rep
                     .form-group
                         input(type="submit",value="Зарегистрироваться")#btn_submit
                 h4 или используйте один из сервисов
                 ul.list-inline.social
                     li
-                        a(href="/login/facebook")
+                        a(href="#")
                             img(src="static/img/social-fb.png",alt="Зарегистрироваться через Фейсбук")
                     li
-                        a(href="/login/twitter/")
+                        a(href="#")
                             img(src="static/img/social-twitter.png",alt="Зарегистрироваться через Твиттер")
                     li
-                        a(href="/login/google-oauth2/")
+                        a(href="#")
                             img(src="static/img/social-rss.png",alt="Зарегистрироваться через Google+")
                     li
-                        a(href="/login/vk-oauth/")
+                        a(href="#")
                             img(src="static/img/social-vk.png",alt="Зарегистрироваться через ВКонтакте")
         include footer
         script.
