--- a/interface/jade/page_index.jade
+++ b/interface/jade/page_index.jade
@@ -24,9 +24,11 @@ html(lang="ru")
                         .filter-main
                             .select-wrapper
                                 select#sel_genre(name="genre")
-                                    option(value="1") любого жанра
-                                    option(value="2") аниме
-                                    option(value="3") боевик
+                                    
+                                    option(value="0") любого жанра
+                                    each item in genres
+                                         option(value=item.id) item.name
+
                             .select-wrapper
                                 select#sel_rating(name="rating")
                                     option(value="0") любого рейтинга
