--- a/interface/jade/mixins.jade
+++ b/interface/jade/mixins.jade
@@ -14,7 +14,8 @@ mixin film_thumb(item,id)
     .film-thumb.col-md-3(data-mi-id="id",data-mi-val=item.id)
         .poster-wrapper
             .poster-place(data-mi-id="poster",data-mi-atbg="poster",data-mi-default="static/img/noposter.jpg",style='background-image: url("' + item.poster + '")')
-        .rating-place(class = item.rating?"":"invisible")
+            
+        .rating-place(class = item.ratings?"":"invisible")
             p.rating(data-mi-name="ratings.cons.0")
                 =item.ratings.cons
         .name-place
