--- a/interface/jade/page_film.jade
+++ b/interface/jade/page_film.jade
@@ -89,13 +89,15 @@ html(lang="ru")
                 .comments-place
                     h2 Комментарии
                     #comments
-                        mixin comment_thumb({id: 1, text: "lorem ipsum ipsum lorem", time_text: "5 минут назад", created: "2014-05-01 19:01:02", user: {id: 1, name: "Василий Пастеров"}})
-                        mixin comment_thumb({id: 2, text: "lorem ipsum ipsum lorem", time_text: "5 минут назад", created: "2014-05-07 15:51:00", user: {id: 2, name: "Галя Кокорева", avatar: "static/img/tmp/user.gif"}})
+                        each item in film.comments
+                            mixin comment_thumb(item)
+
             .col-md-3.actors-place
                 h2 Актёры
                 #actors
-                    mixin person_thumb({id: 100, name: "Роберт Дениро"})
-                    mixin person_thumb({id: 99, name: "Арнольд Шварценегер"})
+                    each item in film.actors
+                        mixin person_thumb(item)
+
                 .actors-more-place#actors_more
                     button
                         span Показать всех
@@ -103,14 +105,9 @@ html(lang="ru")
         .container.films
             h2 Рекомендуемое
             #films
-                mixin film_thumb({id: 1, name: "Самый лучший фильм лучший фильм", year: 2014, relation: {rating: 5}, ratings: {cons: 5.6}, poster: "static/img/tmp/poster1.jpg", instock: true, price: 100})
-                mixin film_thumb({id: 2, name: "Самый лучший фильм", year: 2011, relation: {rating: 5}, ratings: {cons: 8.6}, poster: "static/img/tmp/poster1.jpg", instock: true, hasFree: true})
-                mixin film_thumb({id: 3, name: "Самый лучший фильм", year: 2001, relation: {rating: 8}, ratings: {cons: 7}, poster: "static/img/tmp/poster1.jpg", instock: false})
-                mixin film_thumb({id: 4, name: "Самый лучший фильм", year: 1970, relation: {rating: 3}, ratings: {cons: 9.1}, poster: "static/img/tmp/poster1.jpg", instock: true, hasFree: true, price: 100})
-                mixin film_thumb({id: 1, name: "Самый лучший фильм лучший фильм", year: 2014, ralation: {rating: 5}, ratings: {cons: 5.6}, poster: "static/img/tmp/poster1.jpg", instock: true, price: 100})
-                mixin film_thumb({id: 2, name: "Самый лучший фильм", year: 2011, relation: {rating: 5}, ratings: {cons: 8.6}, poster: "static/img/tmp/poster1.jpg", instock: true, hasFree: true})
-                mixin film_thumb({id: 3, name: "Самый лучший фильм", year: 2001, relation: {rating: 8}, ratings: {cons: 7}, poster: "static/img/tmp/poster1.jpg", instock: false})
-                mixin film_thumb({id: 4, name: "Самый лучший фильм", year: 1970, relation: {rating: 3}, ratings: {cons: 9.1}, poster: "static/img/tmp/poster1.jpg", instock: true, hasFree: true, price: 100})
+                each item in film.similar
+                    mixin film_thumb(item)
+
         include footer
         script.
             $(document).ready(function () {window.InitApp({page_conf: !{JSON.stringify(film)}}, "Film")})
