Change nginx conf. Add page login and page registration and page user

--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -8,6 +8,7 @@ html(lang="ru")
             .container
                 h2 Регистрация
                 form#frm_login(method="post")
+                    input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                     h4 введите логин и пароль
                     .form-group
                         input(type="email",name="email",placeholder="Эл. почта",required="required")#inp_email
@@ -20,16 +21,16 @@ html(lang="ru")
                 h4 или используйте один из сервисов
                 ul.list-inline.social
                     li
-                        a(href="#")
+                        a(href="/login/facebook")
                             img(src="static/img/social-fb.png",alt="Зарегистрироваться через Фейсбук")
                     li
-                        a(href="#")
+                        a(href="/login/twitter/")
                             img(src="static/img/social-twitter.png",alt="Зарегистрироваться через Твиттер")
                     li
-                        a(href="#")
+                        a(href="/login/google-oauth2/")
                             img(src="static/img/social-rss.png",alt="Зарегистрироваться через Google+")
                     li
-                        a(href="#")
+                        a(href="/login/vk-oauth/")
                             img(src="static/img/social-vk.png",alt="Зарегистрироваться через ВКонтакте")
         include footer
         script.
