Сhange mistake in page user

--- a/interface/jade/page_user.jade
+++ b/interface/jade/page_user.jade
@@ -7,7 +7,7 @@ html(lang="ru")
         .user-wrapper
             .container
                 .col-md-3
-                    img.img-responsive.img-circle(src=user.avatar || conf.noavatar_big_url)
+                    img.img-responsive.img-circle(src=user.avatar || "static/img/tmp/user.gif")
                     .button-place
                         button.friendship-btn#friendship_btn Добавить в друзья
                 .col-md-9
