Fixed description and Country for film page

--- a/interface/jade/page_film.jade
+++ b/interface/jade/page_film.jade
@@ -29,8 +29,8 @@ html(lang="ru")
                         tr
                             th Страна
                             td
-                                - items_str = film.countries.join(", ")
-                                =items_str
+                                - items_str = film.countries.map(function(f){return f.name}).join(", ")
+                                = items_str
                     if (film.directors && film.directors.length)
                         tr
                             th Режиссёр
@@ -71,20 +71,7 @@ html(lang="ru")
                 .description-place
                     h2 Описание
                     .description.
-                        Метод HEAD.<br/>Метод HEAD аналогичен методу GET, за исключением того, что сервер ничего не посылает     в информационной части ответа. Метод HEAD запрашивает только информацию заголовка о
-                        файле и ресурсе. Инфоримация заголовка запроса HEAD должна быть такой же, как в запросе
-                        GET.
-                        Этот метод используется, когда клиент хочет найти информацию о документе, не получая
-                        его. Для метода HEAD существует множество приложений. Например, клиент может
-                        затребовать следующую информацию:
-                        * время изменения документа ( эти данные полезны для запросов, связанных с кэш-памятью);
-                        * размер документа (необходим для компоновки страницы, оценки времени передачи,
-                        определения необходимости запроса более компактной версии документа);
-                        * тип документа (позволяет клиенту изучать документы только определенного типа);
-                        * тип сервера;
-                        Следует отметить, что большая часть информации заголовка, которую посылает сервер, не
-                        является обязательной и может предоставляться не всеми срверами.
-                        Ниже приведен пример HTTP-транакции с использованием запроса HEAD. Клиент посылает
+                        #{film.description}
                 .trailer-place
                 .comments-place
                     h2 Комментарии
