Make login and register for user by email. Delete mistake in films API and rating action rate.

--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -11,7 +11,7 @@ html(lang="ru")
                     input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                     h4 введите логин и пароль
                     .form-group
-                        input(type="email",name="email",placeholder="Эл. почта",required="required")#inp_email
+                        input(type="email",name="username",placeholder="Эл. почта",required="required")#inp_email
                     .form-group
                         input(type="password",name="password",placeholder="Пароль",required="required")#inp_password
                     .form-group
