--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -6,7 +6,7 @@ html(lang="ru")
         include header
         .content-blue-wrapper
             .container
-                h2 Регистрация
+                h2 Авторизация
                 form#frm_login(method="post")
                     input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                     h4 введите логин и пароль
