--- a/templates/tokenize.html
+++ b/templates/tokenize.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <noscript>Для корректной работы сервиса необходим JavaScript.</noscript>
-  <script>
-    var
-        token = "",
-        back_url = "/", params, param_arr, days,
-        query_arr = (window.location + "").split("?");
-        
-    if (query_arr.length > 1) {
-        params = query_arr[1].split("&");
-        for (var i = 0; i < params.length; i++) {
-            param_arr = params[i].split("=");
-            if (param_arr[0] == "token")
-                token = decodeURI(param_arr[1]);
-            else if (param_arr[0] == "back" || param_arr[0] == "back_url")
-                back_url = decodeURI(param_arr[1]);
-        }
-    }
-    
-    days = token?14:-1;
-    
-    var date = new Date();
-    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-    document.cookie = "x-token=" + escape(token) + "; expires=" + date.toGMTString() + "; path=/";
-    date.setTime(new Date().getTime() + (-1 * 24 * 60 * 60 * 1000));
-    document.cookie = "x-session=; expires=" + date.toGMTString() + "; path=/";
-    
-    window.location.href = back_url || "/";
-  </script>
+    <noscript>Для корректной работы сервиса необходим JavaScript.</noscript>
+    <script>
+        var token = "{{ token }}";
+        var back_url = "{{ back_url }}";
+        days = token?14:-1;
+
+        var date = new Date();
+        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+        document.cookie = "x-token=" + escape(token) + "; expires=" + date.toGMTString() + "; path=/";
+        date.setTime(new Date().getTime() + (-1 * 24 * 60 * 60 * 1000));
+        document.cookie = "x-session=; expires=" + date.toGMTString() + "; path=/";
+
+        window.location.href = back_url || "/";
+    </script>
 </html>
