--- a/templates/tokenize.html
+++ b/templates/tokenize.html
@@ -4,13 +4,14 @@
     <script>
         var token = "{{ token }}";
         var back_url = "{{ back_url }}";
+        var session_key = "{{ session_key }}";
         days = token?14:-1;
 
         var date = new Date();
         date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
         document.cookie = "x-token=" + escape(token) + "; expires=" + date.toGMTString() + "; path=/";
-        date.setTime(new Date().getTime() + (-1 * 24 * 60 * 60 * 1000));
-        document.cookie = "x-session=; expires=" + date.toGMTString() + "; path=/";
+        date.setTime(new Date().getTime() + (days * 24 * 60 * 60 * 1000));
+        document.cookie = "x-session=" + escape(session_key) + "; expires=" + date.toGMTString() + "; path=/";
 
         window.location.href = back_url || "/";
     </script>
