Fixed film page template

--- a/interface/jade/page_film.jade
+++ b/interface/jade/page_film.jade
@@ -53,10 +53,10 @@ html(lang="ru")
                                         |,&nbsp;
                     tr
                         th Дата выхода
-                        td 1 января
+                        td #{film.releasedate}
                     tr
                         th Время
-                        td 3 часа 10 минут
+                        td #{film.duration} минут
             .col-md-3.rating-place
                 .rating-header Сводный рейтинг
                 .rating-cons-cnt
