Change email template to notification

--- a/templates/notification_film.html
+++ b/templates/notification_film.html
@@ -1,6 +1,6 @@
 <h3>Уважаемый юзер.</h3>
 <p>
-    Фильм {{ object.name }} появился в онлайн кинотеатрах.
+    Фильм <strong>{{ object.name }}</strong> появился в онлайн кинотеатрах.
     Подробнее можете узнать на <a href="http://vsevi.com">vsevi.com</a>
 </p>
 
