Adding dirty hack for rendering index

--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -33,3 +33,4 @@ script(src="static/3d/rateit/jquery.rateit.js")
 script(src="static/js/mi.helper.js")
 script(src="static/js/mi.rest.js")
 script(src="static/js/app1.js")
+script(src="static/js/dirtyhack.js")
