Delete mistake in footer.jade

--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -13,16 +13,16 @@ footer
         .col-md-4.social
             ul.list-inline
                 li
-                    a(href="#")
+                    a(href="/login/facebook")
                         img(src="static/img/social-fb.png",alt="Всё видео на Фейсбуке")
                 li
-                    a(href="#")
+                    a(href="/login/twitter/")
                         img(src="static/img/social-twitter.png",alt="Всё видео на Твиттере")
                 li
-                    a(href="#")
+                    a(href="/login/google-oauth2/")
                         img(src="static/img/social-rss.png",alt="Всё видео RSS")
                 li
-                    a(href="#")
+                    a(href="/login/vk-oauth/")
                         img(src="static/img/social-vk.png",alt="Всё видео во ВКонтакте")
     .container
         .copyright.md-col-12
