--- a/interface/jade/header.jade
+++ b/interface/jade/header.jade
@@ -20,10 +20,10 @@
                         .col-md-3.user-block
                             ul
                                 li
-                                    a.sprite.sprite-i-enter(href='/login', data-toggle='modal', data-target='#reg-enter', title='')
+                                    a.sprite.sprite-i-enter#login_btn(href='/login', title='')
                                         span Вход
                                 li
-                                    a.sprite.sprite-i-reg(href='/register', data-toggle='modal', data-target='#reg-enter', title='')
+                                    a.sprite.sprite-i-reg#reg_btn(href='/register', title='')
                                         span Регистрация
                     .col-md-3.logo-block
                         a(href='/', title='Все Видео')
