--- a/interface/jade/page_register.jade
+++ b/interface/jade/page_register.jade
@@ -9,20 +9,21 @@ body
                     .col-md-6
                         .form-enter
                             p C помощью почты
-                            form.form-horizontal(role='form')
+                            form.form-horizontal(role='form',method='post')
+                                input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
                                 .form-group
                                     label.col-sm-4.control-label(for='inputEmail3') Email
                                     .col-sm-8
-                                        input#inputEmail3.form-control(type='email')
+                                        input#inputEmail3.form-control(type='email',name='email')
                                 .form-group
                                     label.col-sm-4.control-label(for='inputPassword3') Пароль
                                     .col-sm-8
-                                        input#inputPassword3.form-control(type='password')
+                                        input#inputPassword3.form-control(type='password',name='password')
                                         // p Количество символов должно быть не менее 8-ми.
                                 .form-group
                                     label.col-sm-4.control-label(for='inputPassword4') Повторите пароль
                                     .col-sm-8
-                                        input#inputPassword4.form-control(type='password')
+                                        input#inputPassword4.form-control(type='password',name='password2')
                                 .form-group
                                     .col-sm-offset-4.col-sm-10
                                         button.btn.btn-yellow1(type='submit') Зарегистрироваться
