- fixed popup links

--- a/interface/jade/header.jade
+++ b/interface/jade/header.jade
@@ -61,12 +61,12 @@
                     .col-md-4.col-sm-4
                         ul.menu-header
                             li
-                                a(href='/playlist', title='', data-toggle=auth_user?"":'modal', data-target='#reg-enter')
+                                a(href='/playlist', title='', data-toggle=auth_user?"":'modal', data-target='#reg-enter', data-remote="false")
                                     i.sprite.sprite-i-play
                                     br
                                     | Плейлист
                             li
-                                a(href='/feed', title='',data-toggle=auth_user?"":'modal', data-target='#reg-enter')
+                                a(href='/feed', title='',data-toggle=auth_user?"":'modal', data-target='#reg-enter', data-remote="false")
                                     i.sprite.sprite-i-tape
                                     br
                                     | Лента
