--- a/interface/jade/head.jade
+++ b/interface/jade/head.jade
@@ -9,6 +9,7 @@ head
     link(href='static/css/bootstrap-theme.css', rel='stylesheet')
     link(href='static/css/custom.css', rel='stylesheet')
     link(href='static/css/rateit.css', rel='stylesheet')
+    link(href='static/css/uniform.default.min.css', rel='stylesheet')
     //if lt IE 9
         script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
         script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
