Add logout for user

--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -91,7 +91,7 @@ footer(role='contentinfo')
                                 .form-group
                                     label.col-sm-3.control-label(for='inputEmail1') E-mail
                                     .col-sm-9
-                                        input#inputEmail1.form-control(type='email')
+                                        input#inputEmail1.form-control(type='email',name='username')
                                 .form-group
                                     label.col-sm-3.control-label(for='inputPassword1') Пароль
                                     .col-sm-9
